--- a/index.html
+++ b/index.html
@@ -33,6 +33,215 @@
             <a href="" class="hero-btn">Find Out More</a>
         </div>
     </section>
+
+   <!---------- Course ---------->
+   <section class="course">
+    <h1>Courses We Offer</h1>
+    <p>Featuring over 130 Diploma and Graduate Certificate programs, Apprenticeship training programs, and Bachelor’s Degree programs.</p>
+    
+    <div class="row">
+        <div class="course-col">
+            <h3>Intermediate</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+        </div>
+        <div class="course-col">
+            <h3>Degree</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+        </div>
+        <div class="course-col">
+            <h3>Post-Graduate</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+        </div>
+    </div>
+
+    </section>
+
+    <!---------- Branding ---------->
+    <section class="branding">
+        <h1>Branding Labels</h1>
+
+        <div class="row">
+            <div class="branding-col">
+                <img src="img/w1.png" alt="">
+                <img src="img/w2.png" alt="">
+                <h3>Woven Labels</h3>
+                <p>Made up of polyester threads that are woven together on a loom to present your desired designs and messaging.</p>
+            </div>
+            <div class="branding-col">
+                <img src="img/pt1.png" alt="">
+                <img src="img/pt2.png" alt="">
+                <h3>Printed Labels</h3>
+                <p>Contain logos and brand names that are digitally printed directly onto the material of choice.</p>
+            </div>
+            <div class="branding-col">
+                <img src="img/brd1.png" alt="">
+                <img src="img/brd2.png" alt="">
+                <h3>Heat Pressed Labels</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            </div>
+        </div>
+    </section>
+
+    <!---------- Data Management ---------->
+    <section class="branding">
+        <h1>Data Management Solutions</h1>
+
+        <div class="row">
+            <div class="branding-col">
+                <img src="img/brst1.png" alt="">
+                <h3>Barcode Sticker</h3>
+            </div>
+            <div class="branding-col">
+                <img src="img/prtk1.png" alt="">
+                <img src="img/prtk2.png" alt="">
+                <h3>Price Ticket</h3>
+            </div>
+            <div class="branding-col">
+                <img src="img/brd1.png" alt="">
+                <img src="img/brd2.png" alt="">
+                <h3>Care Content</h3>
+            </div>
+        </div>
+    </section>
+
+    <!---------- Intergrated Labels ---------->
+    <section class="integrated">
+        <h1>Intergrated Labels</h1>
+
+        <div class="row">
+            <div class="integrated-col">
+                <img src="img/httr1.png" alt="">
+                <h3>Heat Transfer</h3>
+            </div>
+            <div class="integrated-col">
+                <img src="img/prtk1.png" alt="">
+                <img src="img/prtk2.png" alt="">
+                <h3>Intergrated Hangtag</h3>
+            </div>
+        </div>
+    </section>
+
+    <!---------- Packaging ---------->
+    <section class="packaging">
+        <h1>Packaging Solutions</h1>
+
+        <div class="row">
+            <div class="packaging-col">
+                <img src="img/pabg1.png" alt="">
+                <img src="img/pabg1.png" alt="">
+                <h3>Paper Boxes</h3>
+            </div>
+            <div class="packaging-col">
+                <img src="img/crbx1.png" alt="">
+                <img src="img/crbx2.png" alt="">
+                <h3>Carton Boxes</h3>
+            </div>
+            <div class="packaging-col">
+                <img src="img/pabg1.png" alt="">
+                <img src="img/pabg2.png" alt="">
+                <h3>Paper Bag</h3>
+            </div>
+            <div class="packaging-col">
+                <img src="img/pobg1.png" alt="">
+                <img src="img/pobg2.png" alt="">
+                <img src="img/pobg3.png" alt="">
+                <h3>Polybag</h3>
+            </div>
+        </div>
+    </section>
+
+    <!---------- In-Printing ---------->
+    <section class="inprinting">
+        <h1>In-Printing Solutions</h1>
+
+        <div class="row">
+            <div class="inprinting-col">
+                <img src="img/ips_ttr.png" alt="">
+                <h3>IPS with TTR Ink Ribbon</h3>
+            </div>
+        </div>
+    </section>
+
+    <!---------- Facility ---------->
+    <section class="inprinting">
+        <h1>Facility</h1>
+
+        <div class="row">
+            <div class="inprinting-col">
+                <img src="img/fac.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <!---------- Testimonials ---------->
+    <section class="testimonials">
+        <h1>Customer Comments</h1>
+        
+        <div class="row">
+            <div class="testimonial-col">
+                <img src="eduford_img/user1.jpg" alt="">
+                <div>
+                    <p>It is perfect! Very good product and quality!.</p>
+                    <h3>Reza Sharifi</h3>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+            </div>
+            <div class="testimonial-col">
+                <img src="eduford_img/user2.jpg" alt="">
+                <div>
+                    <p>Bon prix grâce à la quantité.</p>
+                    <h3>Jason</h3>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star-o"></i>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!---------- Location ---------->
+    <section class="location">
+        <h1>Our Locations</h1>
+        <div class="row">
+            <div class="location-col">
+                <img src="img/w1.png" alt="">
+                <div class="layer">
+                    <h3>VIETNAM</h3>
+                </div>
+            </div>
+            <div class="location-col">
+                <img src="img/prtk1.png" alt="">
+                <div class="layer">
+                    <h3>CANADA</h3>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!---------- Call To Action ---------->
+    <section class="cta">
+        <h1>Enroll For Our Various Online Courses<br>Anywhere In The World</h1>
+        <a href="" class="hero-btn">CONTACT US</a>
+    </section>
+
+    <!---------- Footer ---------->
+    <section class="footer">
+        <h4>About Us</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua.</p>
+        <div class="icons">
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-twitter"></i>
+            <i class="fa fa-instagram"></i>
+            <i class="fa fa-linkedin"></i>
+        </div>
+        <p>Made with <i class="fa fa-heart-o"></i> by Easy Tutorials</p>
+    </section>
     <script>
         var navLinks = document.getElementById("navLinks");
 
