Gallery and Contact pages

--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
                 <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">GALLERY</a></li>
-                    <li><a href="#">BLOG</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="gallery.html">GALLERY</a></li>
+                    <li><a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa fa-bars" onclick="showMenu()"></i>
@@ -30,30 +28,8 @@
         <div class="text-box">
             <h1>Local & Passionate</h1>
             <p>For all your labeling needs</p>
-            <a href="" class="hero-btn">Find Out More</a>
+            <a href="about.html" class="hero-btn">Find Out More</a>
         </div>
-    </section>
-
-   <!---------- Course ---------->
-   <section class="course">
-    <h1>Courses We Offer</h1>
-    <p>Featuring over 130 Diploma and Graduate Certificate programs, Apprenticeship training programs, and Bachelor’s Degree programs.</p>
-    
-    <div class="row">
-        <div class="course-col">
-            <h3>Intermediate</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-        </div>
-        <div class="course-col">
-            <h3>Degree</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-        </div>
-        <div class="course-col">
-            <h3>Post-Graduate</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-        </div>
-    </div>
-
     </section>
 
     <!---------- Branding ---------->
@@ -77,7 +53,7 @@
                 <img src="img/brd1.png" alt="">
                 <img src="img/brd2.png" alt="">
                 <h3>Heat Pressed Labels</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                <p>A specific type of decoration, which is transferred from a carrier (transfer paper or foil) onto an object by the use of heat, pressure and/or adhesive.</p>
             </div>
         </div>
     </section>
@@ -210,37 +186,29 @@
         <h1>Our Locations</h1>
         <div class="row">
             <div class="location-col">
-                <img src="img/w1.png" alt="">
+                <img src="img/ben_thanh.jpg" alt="">
                 <div class="layer">
-                    <h3>VIETNAM</h3>
+                    <h3>SAIGON, VIETNAM</h3>
                 </div>
             </div>
             <div class="location-col">
-                <img src="img/prtk1.png" alt="">
+                <img src="img/st_catharines.jpg" alt="">
                 <div class="layer">
-                    <h3>CANADA</h3>
+                    <h3>ST CATHARINES, CANADA</h3>
                 </div>
             </div>
         </div>
     </section>
 
-    <!---------- Call To Action ---------->
-    <section class="cta">
-        <h1>Enroll For Our Various Online Courses<br>Anywhere In The World</h1>
-        <a href="" class="hero-btn">CONTACT US</a>
-    </section>
-
     <!---------- Footer ---------->
     <section class="footer">
-        <h4>About Us</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor<br>incididunt ut labore et dolore magna aliqua.</p>
         <div class="icons">
             <i class="fa fa-facebook"></i>
             <i class="fa fa-twitter"></i>
             <i class="fa fa-instagram"></i>
             <i class="fa fa-linkedin"></i>
         </div>
-        <p>Made with <i class="fa fa-heart-o"></i> by Easy Tutorials</p>
+        <p>Made with <i class="fa fa-heart-o"></i> by Hy Vo. Inspired by Easy Tutorials</p>
     </section>
     <script>
         var navLinks = document.getElementById("navLinks");
