--- a/gallery.html
+++ b/gallery.html
@@ -125,10 +125,8 @@
     <!---------- Footer ---------->
     <section class="footer">
         <div class="icons">
-            <i class="fa fa-facebook"></i>
-            <i class="fa fa-twitter"></i>
-            <i class="fa fa-instagram"></i>
-            <i class="fa fa-linkedin"></i>
+            <a href="https://www.instagram.com/hyvogia/"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/hy-vo-8a0843227/"><i class="fa fa-linkedin"></i></a>
         </div>
         <p>Made with <i class="fa fa-heart-o"></i> by Hy Vo. Inspired by Easy Tutorials</p>
     </section>
