New images & about page
Update logos, images, and include an about page.

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PJHN</title>
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -59,13 +60,14 @@
                 </div>
             </div>
             <div class="contact-col">
-                <form action="form-handler.php" method="post">
+                <!--<form action="form-handler.php" method="post">
                     <input type="text" name="name" placeholder="Enter your name" required>
                     <input type="text" name="email" placeholder="Enter email address" required>
                     <input type="text" name="subject" placeholder="Enter your subject" required>
                     <textarea rows="8" name="message" placeholder="Message" required></textarea>
                     <button type="submit" class="hero-btn red-btn">Send Message</button>
-                </form>
+                </form>-->
+                
             </div>
         </div>
     </section>
